Updated shekiAI
